@@ -47,6 +47,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #15154: Add "dir_fd" parameter to os.rmdir, remove "rmdir"
+  parameter from os.remove / os.unlink.
+
 - Issue #4489: Add a shutil.rmtree that isn't susceptible to symlink attacks.
   It is used automatically on platforms supporting the necessary os.openat()
   and os.unlinkat() functions. Main code by Martin von Löwis.
